# BioPAL

./: .gitignore  .readthedocs.yaml  COPYRIGHT.txt  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
arepytools/: __init__.py  _utils.py  constants.py
arepytools/geometry/: _ellipsoid.py  _interpolator.py  conversions.py  generalsarattitude.py  generalsarorbit.py  wgs84.py
arepytools/io/: __init__.py  _utils.py  channel.py  metadata.py
arepytools/math/: __init__.py  genericpoly.py
arepytools/signal/: interferometry.py
arepytools/timing/: __init__.py
arepytools/view/: sar.py
biopal/: __init__.py  __main__.py
biopal/agb/: estimating_AGB.py  main_AGB.py  processing_AGB.py
biopal/conf/: ConfigurationFile_AGB.xml  ConfigurationFile_CoreProcessingAGB_Default.xml  ConfigurationFile_CoreProcessingAGB_Demo.xml  ConfigurationFile_FD.xml  ConfigurationFile_FH.xml  ConfigurationFile_TOMO_FH.xml  Configuration_File.xml  InputFile_Stand_Alone_APPS_AGB_Demo.xml  biopal_configuration.xml
biopal/data_operations/: data_operations.py
biopal/dataset_query/: dataset_query.py
biopal/fd/: main_FD.py  processing_FD.py
biopal/fh/: main_FH.py  processing_FH.py
biopal/fnf/: main_FNF.py  processing_FNF.py
conf/: ConfigurationFile_AGB.xml  Input_File.xml
doc/: ReadMe_BiomassL2_Prototype.md  api.rst  conf.py  documentation.md  environment.yml  getting_started.rst  index.rst  overview.rst  requirements.txt  tutorials.rst
inputs/: Input_File.xml
src/: run_biomassL2_processor_AGB.py
(+81 files in other folders)
