[metadata]
name = biopal
url = https://biopal.org/
description = BIOMASS Product Algorithm Laboratory
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: biopal.__version__
author = the BioPAL team
author_email = biopal@esa.int
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.9
install_requires =
    GDAL
    lxml
    matplotlib
    numpy<1.24
    scipy
    shapely
    scikit-image
    pandas
    pyproj
    setuptools==60.8.2
    equi7grid==0.0.11
    Pytileproj
    progressbar2
    namedlist
    pyxb
    docopt
    pytest
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    biopal=biopal.__main__:main
    biopal-quickstart=biopal.quickstart.__main__:main    
